[gd_scene load_steps=9 format=3 uid="uid://bqvac3pwjho8j"]

[ext_resource type="Script" path="res://Scripts/zombie.gd" id="1_6y3k0"]
[ext_resource type="Resource" uid="uid://pjeiax2vxbt0" path="res://Objects/Resoruces/items/rottenflesh.tres" id="2_3by8h"]
[ext_resource type="Texture2D" uid="uid://bxbhbgs74naqr" path="res://Assets/853b792d9db7c1afed8be8f25694c61d.png" id="3_7f6vy"]
[ext_resource type="AudioStream" uid="uid://bvwlyl4mb2tdd" path="res://Assets/SOunds/zombie-death-2-95167.mp3" id="4_v5jd7"]
[ext_resource type="AudioStream" uid="uid://b2j045ulal82c" path="res://Assets/SOunds/zombie-6851.mp3" id="5_i2p4w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o5i4l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qurkk"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rhghw"]
streams_count = 2
stream_0/stream = ExtResource("4_v5jd7")
stream_1/stream = ExtResource("5_i2p4w")

[node name="Zombie" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 9
script = ExtResource("1_6y3k0")
drop = ExtResource("2_3by8h")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_o5i4l")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.100048, 0.100048)
texture = ExtResource("3_7f6vy")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -77.0
offset_top = -54.0
offset_right = 89.0
offset_bottom = -27.0
scale = Vector2(0.92457, 0.685508)

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(63.6336, 63.6336)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_qurkk")

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_rhghw")

[connection signal="body_entered" from="Area2D" to="." method="on_enter"]
[connection signal="body_exited" from="Area2D" to="." method="on_exit"]
